fixed text align

--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ header {
 	position: relative;
 	top: -100px;
 	font-size: .9rem;
-	text-align: left;
+	text-align: right;
 }
 .supporting {	
 	padding-left: 10px; 
